# vectors

./: meson.build
include/: vectors.hh
include/vectors/utils/: vector_mm.hh
